--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,13 +58,15 @@
 </table> -->
 <!-- Cards -->
 <div style="display: flex;flex-direction: row;flex-wrap: wrap;gap:20px;margin: auto;justify-content: center;">
-  <div class="card" *ngFor="let VoitureSelected of VoituresAll" style="width: 18rem;box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;">
+  <!-- foreach -->
+  <div class="card" *ngFor="let VoitureSelected of VoituresAll" MyBorderCard="green"
+    style="width: 300px;height: 450px; overflow: hidden; box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;">
     <img [src]="VoitureSelected.Picture" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title"><b>{{ VoitureSelected.Marque }}</b></h5>
       <p class="card-text">{{ VoitureSelected.Module }}</p>
       <p class="card-text">{{ VoitureSelected.Matricule }}</p>
-      <p class="card-text">{{ VoitureSelected.Created }}</p>
+      <p class="card-text">{{ VoitureSelected.Created | date:"dd-MM-yyyy"}}</p>
       <a href="#" class="btn btn-primary">{{VoitureSelected.Prices}}</a>
     </div>
   </div>
