--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
-<h1>Welcome </h1>
+<app-header />
 <!-- <Button (click)="getVoiture(3)">Click me!</Button> -->
 <!-- <router-outlet /> -->
 <!-- (click)="getVoiture($event)" -->
-<input type="number" #MyTextField (keyup.enter)="getVoiture(MyTextField.value)">
+<!-- <input type="number" #MyTextField (keyup.enter)="getVoiture(MyTextField.value)"> -->
 
-<br />
 <br />
 <!-- Card template de Afficher le voiture Corspendent -->
 <!-- <style>
@@ -34,8 +33,8 @@
     </div>
   </div>
 </div> -->
-<h5>Liste les Voitures qui dans le magasin:</h5>
-<br />
+<!-- <h5>Liste les Voitures qui dans le magasin:</h5> -->
+
 <!-- <br />
 <table border="1" style="margin: auto;">
   <tr>
@@ -56,18 +55,6 @@
     <td>{{ VoitureSelected.Created }}</td>
   </tr>
 </table> -->
-<!-- Cards -->
-<div style="display: flex;flex-direction: row;flex-wrap: wrap;gap:20px;margin: auto;justify-content: center;">
-  <!-- foreach -->
-  <div class="card" *ngFor="let VoitureSelected of VoituresAll" MyBorderCard="green"
-    style="width: 300px;height: 450px; overflow: hidden; box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;">
-    <img [src]="VoitureSelected.Picture" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title"><b>{{ VoitureSelected.Marque }}</b></h5>
-      <p class="card-text">{{ VoitureSelected.Module }}</p>
-      <p class="card-text">{{ VoitureSelected.Matricule }}</p>
-      <p class="card-text">{{ VoitureSelected.Created | date:"dd-MM-yyyy"}}</p>
-      <a href="#" class="btn btn-primary">{{VoitureSelected.Prices}}</a>
-    </div>
-  </div>
-</div>
+<div style="min-height: 70vh;height: fit-content;"><router-outlet></router-outlet></div>
+
+<app-footer />
