--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,6 +55,6 @@
     <td>{{ VoitureSelected.Created }}</td>
   </tr>
 </table> -->
-<div style="min-height: 70vh;height: fit-content;"><router-outlet></router-outlet></div>
+<div style="min-height: 100vh;"><router-outlet></router-outlet></div>
 
 <app-footer />
